--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-npm i @mui/material@5.11.11 @mui/system@5.11.11 @mui/icons-material@5.11.11
+npm i @mui/material@5.14.14 @mui/system@5.14.14 @mui/icons-material@5.14.14
 npm error code ERESOLVE
 npm error ERESOLVE unable to resolve dependency tree
 npm error
 npm error While resolving: snb-conductor@0.1.0
-npm error Found: @mui/material@5.11.11
-npm error node_modules/@mui/material
-npm error   @mui/material@"5.11.11" from the root project
+npm error Found: @mui/styled-engine-sc@5.11.11
+npm error node_modules/@mui/styled-engine-sc
+npm error   @mui/styled-engine-sc@"5.11.11" from the root project
 npm error
 npm error Could not resolve dependency:
-npm error peer @mui/material@"^5.14.14" from @conductor/global-activity-user@1.0.5
+npm error peer @mui/styled-engine-sc@"^6.0.0-alpha.2" from @conductor/global-activity-user@1.0.5
 npm error node_modules/@conductor/global-activity-user
 npm error   @conductor/global-activity-user@"^1.0.5" from the root project
 npm error
@@ -18,8 +18,8 @@ npm error to accept an incorrect (and potentially broken) dependency resolution.
 npm error
 npm error
 npm error For a full report see:
-npm error C:\Users\DanielG\AppData\Local\npm-cache\_logs\2025-02-09T15_39_43_053Z-eresolve-report.txt
-npm error A complete log of this run can be found in: C:\Users\DanielG\AppData\Local\npm-cache\_logs\2025-02-09T15_39_43_053Z-debug-0.log
+npm error C:\Users\DanielG\AppData\Local\npm-cache\_logs\2025-02-09T15_47_25_650Z-eresolve-report.txt
+npm error A complete log of this run can be found in: C:\Users\DanielG\AppData\Local\npm-cache\_logs\2025-02-09T15_47_25_650Z-debug-0.log
 
 DanielG@NYDEVVDI0027 MINGW64 /h/Documents/fee-management-frontend (develop)
 $
