--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,9 @@
-npm i @mui/material@5.14.14 @mui/system@5.14.14 @mui/icons-material@5.14.14
-npm error code ERESOLVE
-npm error ERESOLVE unable to resolve dependency tree
-npm error
-npm error While resolving: snb-conductor@0.1.0
-npm error Found: @mui/styled-engine-sc@5.11.11
-npm error node_modules/@mui/styled-engine-sc
-npm error   @mui/styled-engine-sc@"5.11.11" from the root project
-npm error
-npm error Could not resolve dependency:
-npm error peer @mui/styled-engine-sc@"^6.0.0-alpha.2" from @conductor/global-activity-user@1.0.5
-npm error node_modules/@conductor/global-activity-user
-npm error   @conductor/global-activity-user@"^1.0.5" from the root project
-npm error
-npm error Fix the upstream dependency conflict, or retry
-npm error this command with --force or --legacy-peer-deps
-npm error to accept an incorrect (and potentially broken) dependency resolution.
-npm error
-npm error
-npm error For a full report see:
-npm error C:\Users\DanielG\AppData\Local\npm-cache\_logs\2025-02-09T15_47_25_650Z-eresolve-report.txt
-npm error A complete log of this run can be found in: C:\Users\DanielG\AppData\Local\npm-cache\_logs\2025-02-09T15_47_25_650Z-debug-0.log
-
-DanielG@NYDEVVDI0027 MINGW64 /h/Documents/fee-management-frontend (develop)
-$
+  code: 'MODULE_NOT_FOUND',
+  requireStack: [
+    'H:\\Documents\\fee-management-frontend\\node_modules\\next\\dist\\server\\load-components.js',
+    'H:\\Documents\\fee-management-frontend\\node_modules\\next\\dist\\build\\utils.js',
+    'H:\\Documents\\fee-management-frontend\\node_modules\\next\\dist\\cli\\next-dev.js',
+    'H:\\Documents\\fee-management-frontend\\node_modules\\next\\dist\\lib\\commands.js',
+    'H:\\Documents\\fee-management-frontend\\node_modules\\next\\dist\\bin\\next'
+  ]
+}
