--- a/.gitignore
+++ b/.gitignore
@@ -1,450 +1,6 @@
-{
-  "Bank Account Fees": {
-    feeType: "Bank Account Fees",
-    feeGroups: [
-      {
-        name: "Standard Fees",
-        code: 1,
-        fields: [
-          {
-            code: 4,
-            name: "FX Outgoing Wire Fee",
-            defaultValue: "25",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 8,
-            name: "FX Outgoing Wire (SafraLink) Fee",
-            defaultValue: "10",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 4,
-            name: "FX Outgoing Wire Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 8,
-            name: "FX Outgoing Wire (SafraLink) Fee",
-            defaultValue: "10",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 4,
-            name: "FX Outgoing Wire Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 8,
-            name: "FX Outgoing Wire (SafraLink) Fee",
-            defaultValue: "10",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 4,
-            name: "FX Outgoing Wire Fee",
-            defaultValue: "25",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 8,
-            name: "FX Outgoing Wire (SafraLink) Fee",
-            defaultValue: "10",
-            tooltip: "",
-            isException: false,
-          },
-        ],
-      },
-      {
-        name: "Client Current Fees",
-        code: 2,
-        fields: [
-          {
-            code: 4,
-            name: "FX Outgoing Wire Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 8,
-            name: "FX Outgoing Wire (SafraLink) Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 4,
-            name: "FX Outgoing Wire Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 8,
-            name: "FX Outgoing Wire (SafraLink) Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 4,
-            name: "FX Outgoing Wire Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 8,
-            name: "FX Outgoing Wire (SafraLink) Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 4,
-            name: "FX Outgoing Wire Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 8,
-            name: "FX Outgoing Wire (SafraLink) Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-        ],
-      },
-      {
-        name: "Exceptions",
-        code: 3,
-        fields: [
-          {
-            code: 4,
-            name: "FX Outgoing Wire Fee",
-            defaultValue: "0",
-            tooltip: "",
-            isException: true,
-          },
-          {
-            code: 8,
-            name: "FX Outgoing Wire (SafraLink) Fee",
-            defaultValue: "0",
-            tooltip: "",
-            isException: true,
-          },
-        ],
-      },
-    ],
-  },
-  "Investment Account Fees": {
-    feeType: "Investment Account Fees",
-    feeGroups: [
-      {
-        name: "Standard Fees",
-        code: 1,
-        fields: [
-          {
-            code: 6,
-            name: "Safekeeping of Securities",
-            defaultValue: "",
-            tooltip: "0.35% /YR min $375.00/QTR",
-            isException: false,
-          },
-          {
-            code: 5,
-            name: "SSL Account Maintanance Fee",
-            defaultValue: "375",
-            tooltip: "Quarterly on Day 1",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "US Equities Commission",
-            defaultValue: "",
-            tooltip: "$0.10 per share, min charge of $150 per trade",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "Options Commission",
-            defaultValue: "",
-            tooltip: "$0.10 per share, min charge of $150 per trade",
-            isException: false,
-          },
-          {
-            code: 6,
-            name: "Safekeeping of Securities",
-            defaultValue: "",
-            tooltip: "0.35% /YR min $375.00/QTR",
-            isException: false,
-          },
-          {
-            code: 5,
-            name: "SSL Account Maintanance Fee",
-            defaultValue: "375",
-            tooltip: "Quarterly on Day 1",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "US Equities Commission",
-            defaultValue: "",
-            tooltip: "$0.10 per share, min charge of $150 per trade",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "Options Commission",
-            defaultValue: "",
-            tooltip: "$0.10 per share, min charge of $150 per trade",
-            isException: false,
-          },
-          {
-            code: 6,
-            name: "Safekeeping of Securities",
-            defaultValue: "",
-            tooltip: "0.35% /YR min $375.00/QTR",
-            isException: false,
-          },
-          {
-            code: 5,
-            name: "SSL Account Maintanance Fee",
-            defaultValue: "375",
-            tooltip: "Quarterly on Day 1",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "US Equities Commission",
-            defaultValue: "",
-            tooltip: "$0.10 per share, min charge of $150 per trade",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "Options Commission",
-            defaultValue: "",
-            tooltip: "$0.10 per share, min charge of $150 per trade",
-            isException: false,
-          },
-          {
-            code: 6,
-            name: "Safekeeping of Securities",
-            defaultValue: "",
-            tooltip: "0.35% /YR min $375.00/QTR",
-            isException: false,
-          },
-          {
-            code: 5,
-            name: "SSL Account Maintanance Fee",
-            defaultValue: "375",
-            tooltip: "Quarterly on Day 1",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "US Equities Commission",
-            defaultValue: "",
-            tooltip: "$0.10 per share, min charge of $150 per trade",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "Options Commission",
-            defaultValue: "",
-            tooltip: "$0.10 per share, min charge of $150 per trade",
-            isException: false,
-          },
-        ],
-      },
-      {
-        name: "Client Current Fees",
-        code: 2,
-        fields: [
-          {
-            code: 6,
-            name: "Safekeeping of Securities",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 5,
-            name: "SSL Account Maintanance Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "US Equities Commission",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "Options Commission",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 6,
-            name: "Safekeeping of Securities",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 5,
-            name: "SSL Account Maintanance Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "US Equities Commission",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "Options Commission",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 6,
-            name: "Safekeeping of Securities",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 5,
-            name: "SSL Account Maintanance Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "US Equities Commission",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "Options Commission",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 6,
-            name: "Safekeeping of Securities",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 5,
-            name: "SSL Account Maintanance Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "US Equities Commission",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 7,
-            name: "Options Commission",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-        ],
-      },
-    ],
-  },
-  "Customer Fees": {
-    feeType: "Customer Fees",
-    feeGroups: [
-      {
-        name: "Standard Fees",
-        code: 1,
-        fields: [
-          {
-            code: 1,
-            name: "Account Maintenance Fee",
-            defaultValue: "25",
-            tooltip: "Monthly - Charged Quarterly",
-            isException: false,
-          },
-          {
-            code: 2,
-            name: "Hold Mail Fee",
-            defaultValue: "",
-            tooltip: "Annual - Charged Annual",
-            isException: false,
-          },
-        ],
-      },
-      {
-        name: "Client Current Fees",
-        code: 2,
-        fields: [
-          {
-            code: 1,
-            name: "Account Maintenance Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-          {
-            code: 2,
-            name: "Hold Mail Fee",
-            defaultValue: "",
-            tooltip: "",
-            isException: false,
-          },
-        ],
-      },
-      {
-        name: "Exceptions",
-        code: 3,
-        fields: [
-          {
-            code: 1,
-            name: "Account Maintenance Fee",
-            defaultValue: "0",
-            tooltip: "",
-            isException: true,
-          },
-        ],
-      },
-    ],
-  },
-}
+0 =
+'Bank Account Fees'
+1 =
+'Investment Account Fees'
+2 =
+'Customer Fees'
