--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,248 @@
-0 =
-'Bank Account Fees'
-1 =
-'Investment Account Fees'
-2 =
-'Customer Fees'
+import { Fee } from '#src/models/entities/Fees.js';
+import Result from '#features/shared/result.js';
+import CustomerFees from '#src/models/CustomerFees.js';
+import BankAccountFee from '#src/models/BankAccountFee.js';
+import InvestimentAccountFee from '#src/models/InvestimentAccountFee.js';
+import { FeeCase } from '#src/models/entities/FeeCase.js';
+// import { Field } from '#src/models/entities/Fields.js';
+import {
+  connectToFeeMgmtDb,
+  executeStoreProcedure,
+} from '#core/data/mssql/index.js';
+
+const deParaFeeCodes = {
+  JH001: 1,
+  JH002: 2,
+  JH006: 4,
+  JH007: 8,
+  BPS002: 6,
+  BPS003: 5,
+  BPS004: 7,
+  BPS005: 7,
+  JH010: 3,
+};
+
+export default class FeeGetByCifUseCase {
+  async execute({ customerAccount }) {
+    const result = { fees: [] };
+
+    const { groupedFees, accounts } = await this.#getFeesStructuredFromSQL(
+      customerAccount
+    );
+
+    const customer = new CustomerFees(groupedFees, accounts);
+    if (customer.fee) result.fees.push(customer.fee);
+
+    const bank = new BankAccountFee(groupedFees, accounts);
+    if (bank.fee) result.fees.push(bank.fee);
+
+ 
+let investmentGroup = groupedFees['Investment Account Fees'];
+if (investmentGroup) {
+  const equityFields = accounts.filter((account) => account.feeType === 3); 
+  equityFields.forEach((field) => {
+    let investmentGroupFields = investmentGroup.feeGroups.find((group) => group.name === 'Standard Fees');
+    if (!investmentGroupFields) {
+      investmentGroupFields = {
+        name: 'Standard Fees',
+        code: 1,
+        fields: [],
+      };
+      investmentGroup.feeGroups.push(investmentGroupFields);
+    }
+
+    investmentGroupFields.fields.push({
+      code: field.code,
+      name: field.name || 'Equity and Options Commission',
+      defaultValue: field.defaultValue || '',
+      tooltip: field.tooltip || '',
+      isException: field.isException || false,
+    });
+  });
+
+  result.fees.push(investmentGroup);
+}
+console.log('>>>>>>>>>>>>investmentGroup>>>>>>>>>>>>>>',investmentGroup)
+
+
+    // Buscar casos ativos de Fees
+    const feesActives = await FeeCase.find({
+      cif: customerAccount[0].cifno,
+      status: {
+        $nin: ['DONE', 'REJECTED'],
+      },
+      caseNumber: {
+        $exists: true,
+      },
+    });
+
+    result.feesActives = feesActives?.map((x) => ({
+      caseNumber: x.caseNumber,
+      id: x.id,
+    }));
+
+    // result.documentUrl = this.#getDocumentUrl(feePackageId);
+
+   
+    return Result.ok(result);
+  }
+
+  async #getFeesStructuredFromSQL(customerAccount) {
+    const feesData = await this.#getFeesFromSQL(customerAccount[0].cifno);
+
+    const feePackageId = feesData[0]?.['Default Fee Package Id'];
+    if (!feePackageId) {
+      throw new Error('Default Fee Package Id not found in feesData');
+    }
+
+    const accounts = feesData.map((fee) => ({
+      cifno: fee.CIFNO,
+      ddaNumber: fee.ACCTNO,
+      branchCity: fee['Branch City'],
+      branchState: fee['Branch State'],
+      branchType: fee['Branch Type'],
+      defaultPackageType: fee['Default Package Type'],
+      feeType: this.#mapFeeType(fee.FeeType),
+      feeGroup: 1, 
+      kycMailingStatus: fee.StandardException === 'Standard' ? 'Standard' : 'Hold Mail',
+    }));
+
+    const groupedFees = {};
+
+    for (const fee of feesData) {
+      const { FeeType, FeeDescription, FeeCode, FeeAmount, Frequency, DefaultFeeAmount, DefaultFrequency } = fee;
+
+      const mappedCode = deParaFeeCodes[FeeCode] || FeeCode;
+
+      if (!groupedFees[FeeType]) {
+        groupedFees[FeeType] = {
+          feeType: FeeType,
+          feeGroups: [],
+        };
+      }
+
+      let standardGroup = groupedFees[FeeType].feeGroups.find((group) => group.name === 'Standard Fees');
+      if (!standardGroup) {
+        standardGroup = {
+          name: 'Standard Fees',
+          code: 1,
+          fields: [],
+        };
+        groupedFees[FeeType].feeGroups.push(standardGroup);
+      }
+
+      standardGroup.fields.push({
+        code: mappedCode,
+        name: FeeDescription,
+        defaultValue: FeeAmount ? FeeAmount.toString() : '',
+        tooltip: Frequency ? Frequency : '',
+        isException: false,
+      });
+
+      let clientCurrentGroup = groupedFees[FeeType].feeGroups.find((group) => group.name === 'Client Current Fees');
+      if (!clientCurrentGroup) {
+        clientCurrentGroup = {
+          name: 'Client Current Fees',
+          code: 2,
+          fields: [],
+        };
+        groupedFees[FeeType].feeGroups.push(clientCurrentGroup);
+      }
+
+      clientCurrentGroup.fields.push({
+        code: mappedCode,
+        name: FeeDescription,
+        defaultValue: DefaultFeeAmount ? DefaultFeeAmount.toString() : '',
+        tooltip: DefaultFrequency ? DefaultFrequency : '',
+        isException: false,
+      });
+    }
+
+    const exceptions = await this.#getExceptionFeesFromSQL(feePackageId);
+    console.log('Exceptions from SQL:', exceptions);
+
+    for (const exception of exceptions) {
+      const { code, name, defaultValue, tooltip, isException } = exception;
+
+console.log( ' Object.keys(groupedFees)',Object.keys(groupedFees))
+
+      const feeType = Object.keys(groupedFees).find((type) =>
+        groupedFees[type].feeGroups.some((group) =>
+          group.fields.some((field) => field.code === code)
+        )
+      );
+
+      if (!feeType) {
+        console.warn(`FeeType not found for exception code: ${code}`);
+        continue;
+      }
+
+      let exceptionGroup = groupedFees[feeType]?.feeGroups.find(
+        (group) => group.name === 'Exceptions'
+      );
+      if (!exceptionGroup) {
+        exceptionGroup = {
+          name: 'Exceptions Request',
+          code: 3,
+          fields: [],
+        };
+        groupedFees[feeType]?.feeGroups.push(exceptionGroup);
+      }
+
+      exceptionGroup.fields.push({
+        code,
+        name,
+        defaultValue,
+        tooltip,
+        isException,
+      });
+    }
+
+    console.log('Grouped Fees with Exceptions:', groupedFees);
+
+    return { groupedFees: Object.values(groupedFees), accounts };
+  }
+
+  #getDocumentUrl(feePackageId) {
+    return global.environment.scheduleUrls?.[feePackageId] || '';
+  }
+
+  #mapFeeType(feeType) {
+    switch (feeType) {
+      case 'Customer Fees':
+        return 1;
+      case 'Bank Account Fees':
+        return 2;
+      case 'Investment Account Fees':
+        return 3;
+      default:
+        return 0;
+    }
+  }
+
+  async #getFeesFromSQL(cifno) {
+    const connection = await connectToFeeMgmtDb();
+    return executeStoreProcedure(connection, 'sp_get_fees_byCIF', { cifno });
+  }
+
+  async #getExceptionFeesFromSQL(feePackageId) {
+    const connection = await connectToFeeMgmtDb();
+    const data = await executeStoreProcedure(
+      connection,
+      'sp_get_exception_fees_bypackage',
+      { feePackageId }
+    );
+
+    return data.map((exception) => ({
+      code: deParaFeeCodes[exception.FeeCode] || exception.FeeCode,
+      name: exception.FeeDescription,
+      defaultValue: exception.Amount?.toString() || '0',
+      tooltip: exception.FreqDescription || '',
+      isException: true,
+    }));
+  }
+}
+
+
+
+FX Outgoing Wire (SafraLink) Fee
