--- a/.gitignore
+++ b/.gitignore
@@ -1,105 +1,4 @@
-import { Fee } from '#src/models/entities/Fees.js';
-import Result from '#features/shared/result.js';
-import CustomerFees from '#src/models/CustomerFees.js';
-import BankAccountFee from '#src/models/BankAccountFee.js';
-import InvestimentAccountFee from '#src/models/InvestimentAccountFee.js';
-import { FeeCase } from '#src/models/entities/FeeCase.js';
-// import { Field } from '#src/models/entities/Fields.js';
-import {
-  connectToFeeMgmtDb,
-  executeStoreProcedure,
-} from '#core/data/mssql/index.js';
-
-const deParaFeeCodes = {
-  JH001: 1,
-  JH002: 2,
-  JH006: 4,
-  JH007: 8,
-  BPS002: 6,
-  BPS003: 5,
-  BPS004: 7,
-  BPS005: 7,
-  JH010: 3,
-};
-
-const excludedCodes = new Set([8]);
-
-export default class FeeGetByCifUseCase {
-  async execute({ customerAccount }) {
-    const result = { fees: [] };
-
-    const { groupedFees, accounts } = await this.#getFeesStructuredFromSQL(
-      customerAccount
-    );
-
-    result.accounts = accounts.map((account) => ({
-      cifno: account.cifno,
-      ddaNumber: account.ddaNumber,
-      branchCity: account.branchCity,
-      branchState: account.branchState, 
-      branchType: account.branchType, 
-      defaultPackageType: account.defaultPackageType, 
-      feePackage: account.feePackage, 
-    }));
-
-    const customer = new CustomerFees(groupedFees, accounts);
-    if (customer.fee) result.fees.push(customer.fee);
-
-    const bank = new BankAccountFee(groupedFees, accounts);
-    if (bank.fee) result.fees.push(bank.fee);
-
-
-    let investmentGroup = groupedFees['Investment Account Fees'];
-    if (investmentGroup) {
-      const equityFields = accounts.filter((account) => account.feeType === 3);
-      equityFields.forEach((field) => {
-        let investmentGroupFields = investmentGroup.feeGroups.find((group) => group.name === 'Standard Fees');
-        if (!investmentGroupFields) {
-          investmentGroupFields = {
-            name: 'Standard Fees',
-            code: 1,
-            fields: [],
-          };
-          investmentGroup.feeGroups.push(investmentGroupFields);
-        }
-
-        investmentGroupFields.fields.push({
-          code: field.code,
-          name: field.name || 'Equity and Options Commission',
-          defaultValue: field.defaultValue || '',
-          tooltip: field.tooltip || '',
-          isException: field.isException || false,
-        });
-      });
-
-      result.fees.push(investmentGroup);
-    }
-
-
-    const feesActives = await FeeCase.find({
-      cif: customerAccount[0].cifno,
-      status: {
-        $nin: ['DONE', 'REJECTED'],
-      },
-      caseNumber: {
-        $exists: true,
-      },
-    });
-
-    result.feesActives = feesActives?.map((x) => ({
-      caseNumber: x.caseNumber,
-      id: x.id,
-    }));
-
-    // console.log('>>>>>>>>>>>>>>>>>>>>>>>>>>feePackageId',feePackageId);
-
-    // result.documentUrl = this.#getDocumentUrl(feePackageId);
-
-    return Result.ok(result);
-  }
-
-
-  async #getFeesStructuredFromSQL(customerAccount) {
+async #getFeesStructuredFromSQL(customerAccount) {
     const feesData = await this.#getFeesFromSQL(customerAccount[0].cifno);
 
     const feePackageId = feesData[0]?.['Default Fee Package Id'];
@@ -193,11 +92,13 @@ export default class FeeGetByCifUseCase {
         });
     }
 
+    // Buscar exceptions e adicionar dentro de exceptionOptions nos fields de Exceptions Request
     const exceptions = await this.#getExceptionFeesFromSQL(feePackageId);
-
+    
     for (const exception of exceptions) {
         const { code, name, defaultValue, tooltip, isException } = exception;
 
+        // Encontrar o feeType que tem esse código
         const feeType = Object.keys(groupedFees).find((type) =>
             groupedFees[type].feeGroups.some((group) =>
                 group.fields.some((field) => field.code === code)
@@ -210,7 +111,7 @@ export default class FeeGetByCifUseCase {
         }
 
         let exceptionGroup = groupedFees[feeType]?.feeGroups.find(
-            (group) => group.name === 'Exceptions'
+            (group) => group.name === 'Exceptions Request'
         );
 
         if (!exceptionGroup) {
@@ -222,54 +123,30 @@ export default class FeeGetByCifUseCase {
             groupedFees[feeType]?.feeGroups.push(exceptionGroup);
         }
 
-        exceptionGroup.fields.push({
+        let existingField = exceptionGroup.fields.find(field => field.code === code);
+
+        if (!existingField) {
+            // Criar um novo campo para essa exception
+            existingField = {
+                code,
+                name,
+                defaultValue,
+                tooltip,
+                isException,
+                exceptionOptions: [] // Iniciamos o array para adicionar exceptions dentro
+            };
+            exceptionGroup.fields.push(existingField);
+        }
+
+        // Adicionar as exceptions dentro do campo correspondente
+        existingField.exceptionOptions.push({
             code,
             name,
             defaultValue,
             tooltip,
-            isException,
+            isException
         });
     }
 
     return { groupedFees: Object.values(groupedFees), accounts };
-}
-
-  #getDocumentUrl(feePackageId) {
-    return global.environment.scheduleUrls?.[feePackageId] || '';
-  }
-
-  #mapFeeType(feeType) {
-    switch (feeType) {
-      case 'Customer Fees':
-        return 1;
-      case 'Bank Account Fees':
-        return 2;
-      case 'Investment Account Fees':
-        return 3;
-      default:
-        return 0;
-    }
-  }
-
-  async #getFeesFromSQL(cifno) {
-    const connection = await connectToFeeMgmtDb();
-    return executeStoreProcedure(connection, 'sp_get_fees_byCIF', { cifno });
-  }
-
-  async #getExceptionFeesFromSQL(feePackageId) {
-    const connection = await connectToFeeMgmtDb();
-    const data = await executeStoreProcedure(
-      connection,
-      'sp_get_exception_fees_bypackage',
-      { feePackageId }
-    );
-
-    return data.map((exception) => ({
-      code: deParaFeeCodes[exception.FeeCode] || exception.FeeCode,
-      name: exception.FeeDescription,
-      defaultValue: exception.Amount?.toString() || '0',
-      tooltip: exception.FreqDescription || '',
-      isException: true,
-    }));
-  }
 }
